--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=Nppw8M"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=Nppw8M" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=aBq1rh"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=aBq1rh" type="text/css">
 
   
   
@@ -130,7 +130,7 @@
         </div>
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="MUNmYmIhD+CsZvqgcL52Bn72ORhKKLoJlxUoLso1vQ3xoikJ9GOUorWYzqnt5nfx3AB96+PYN7vzZvix1nh3C26ecEuwBwvle83xpOYY2Zt7XQMKqMeG459lIjRNxVx2">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="H3bfW7QbuCQU85zSR0Ksyi9Ha8LIfDv8vY9MDts1VtPaltFY2oVDNWXBgm9qRXjie9LBi9SDnalVnYzuUWSySnPs5ueZGFqiT8p2AVz1ZmDj23lezUV2oPdnD+5zCkjS">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for Contacting Us!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -142,11 +142,11 @@
                             <input type="text" name="name" placeholder="Name" data-form-field="name" class="form-control" value="" id="name-form02-6">
                         </div>
                         <div class="col-md col-sm-12 form-group mb-3" data-for="email">
-                            <input type="email" name="email" placeholder="E-mail" data-form-field="email" class="form-control" value="" id="email-form02-6">
-                        </div>
+    <input type="email" name="email" placeholder="E-mail" data-form-field="email" class="form-control" value="" required="" id="email-form02-6">
+</div>
                         
                         <div class="col-12 form-group mb-3" data-for="textarea">
-                            <textarea name="textarea" placeholder="Message" data-form-field="textarea" class="form-control" id="textarea-form02-6"></textarea>
+                            <textarea name="textarea" placeholder="Message" data-form-field="textarea" class="form-control" required="" id="textarea-form02-6"></textarea>
                         </div>
                         <div class="col-lg-12 col-md-12 col-sm-12 align-center mbr-section-btn"><button type="submit" class="btn btn-primary display-7">Send message</button></div>
                     </div>
